<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/senacclogo1301"
    android:padding="15dp"
    tools:context=".activitys.MainActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:text="@string/main_tela_main_activity"
    android:textSize="30sp"
    android:gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_customizado"
        android:onClick="addAction"
        android:text="@string/adcionar_produto"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_customizado"
        android:onClick="limparListaAction"
        android:text="@string/limpar_lista"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Total : R$ 0,00"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:id="@+id/listProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

</LinearLayout>